PN-19326 feat: add payment cost retrieval endpoint and response mapping
