# src/main/java/it/pagopa/pn/notificationcostservice/rest/NotificationCostServiceController.java
@@ -2,6 +2,7 @@ package it.pagopa.pn.notificationcostservice.rest;
 
 import it.pagopa.pn.notification_cost_service.generated.openapi.server.v1.api.NotificationCostRecipientApi;
 import it.pagopa.pn.notification_cost_service.generated.openapi.server.v1.dto.NewNotificationCostRequestDto;
+import it.pagopa.pn.notification_cost_service.generated.openapi.server.v1.dto.NotificationCostPaymentResponseDto;
 import it.pagopa.pn.notification_cost_service.generated.openapi.server.v1.dto.NotificationCostRecipientResponseDto;
 import it.pagopa.pn.notificationcostservice.model.ValidationStatus;
 import it.pagopa.pn.notificationcostservice.service.NotificationCostService;
@@ -23,8 +24,8 @@ public class NotificationCostServiceController implements NotificationCostRecipi
     private final NotificationDeliveryCostMapper mapper;
     private final PaymentInfoMapper paymentInfoMapper;
 
-    public Mono<ResponseEntity<NotificationCostRecipientResponseDto>> getNotificationCost(String iun,
-                                                                                          Integer recIndex,
+    @Override
+    public Mono<ResponseEntity<NotificationCostRecipientResponseDto>> getNotificationCost(String iun, Integer recIndex,
                                                                                           final ServerWebExchange exchange) {
         return notificationCostService.getNotificationCostRecipient(iun, recIndex)
                 .map(ResponseEntity::ok);
@@ -40,5 +41,11 @@ public class NotificationCostServiceController implements NotificationCostRecipi
                 .thenReturn(ResponseEntity.accepted().body(
                         ValidationStatus.OK.name())
                 );
+    }
+
+    @Override
+    public Mono<ResponseEntity<NotificationCostPaymentResponseDto>> getNotificationCostByPayment(String iuv, final ServerWebExchange exchange) {
+        return notificationCostService.getNotificationCostPaymentInfo(iuv)
+                .map(ResponseEntity::ok);
     }
 }
